# magector

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.cursor/rules/: magector.mdc
.github/workflows/: publish.yml  release.yml
config/: mcp-config.json
docs/superpowers/plans/: 2026-04-13-architecture-improvements.md
docs/superpowers/specs/: 2026-04-12-index-enrichment-design.md  2026-04-13-architecture-improvements-design.md
rust-core/: .cursorrules  Cargo.toml  Dockerfile.build  README.md  build.rs  glibc_compat.c
rust-core/queries/: dataobject-set-null.scm  unchecked-method-chain.scm
rust-core/src/: ast.rs  datadb.rs  describe.rs  embedder.rs  indexer.rs  lib.rs  magento.rs  main.rs  sona.rs  validation.rs  vectordb.rs  watcher.rs
scripts/: setup.sh
src/: binary.js  cli.js  indexer.js  init.js  magento-patterns.js  mcp-server.js  model.js  update.js
src/templates/: claude-md.js  cursor-rules-mdc.js  cursorrules.js
src/validation/: accuracy-calculator.js  benchmark.js  developer-validator.js  real-validator.js  test-data-generator.js  test-queries.js  validator.js
tests/: mcp-accuracy.test.js  mcp-llm.test.js  mcp-server.test.js  mcp-sona-eval.test.js  mcp-sona.test.js  trace-flow.test.js  trace-graphql.test.js  unit.test.js
tests/results/: accuracy-report.json  sona-eval-report.json
