[package]
name = "magector-core"
version = "1.4.1"
edition = "2021"
description = "Magento source code indexer with semantic embeddings"
license = "MIT"

[dependencies]
# ONNX Runtime for embeddings
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
ndarray = "0.16"

# Vector search
hnsw_rs = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File handling
walkdir = "2.5"
glob = "0.3"
memmap2 = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"

# Text processing
regex = "1.11"
unicode-normalization = "0.1"
tokenizers = "0.21"

# AST parsing with tree-sitter
tree-sitter = "0.24"
tree-sitter-php = "0.23"
tree-sitter-javascript = "0.23"

# HTTP client for model downloads
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress and UI
indicatif = "0.17"
colored = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
