[package]
name = "magector-core"
version = "1.7.3"
edition = "2021"
description = "Magento source code indexer with semantic embeddings"
license = "MIT"


[dependencies]
# ONNX Runtime for embeddings
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
ndarray = "0.16"

# Vector search
hnsw_rs = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }

# File handling
walkdir = "2.5"
glob = "0.3"
memmap2 = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"

# Text processing
regex = "1.11"
unicode-normalization = "0.1"
tokenizers = "0.21"

# AST parsing with tree-sitter
tree-sitter = "0.24"
tree-sitter-php = "0.23"
tree-sitter-javascript = "0.23"

# HTTP client for model downloads
ureq = { version = "3", features = ["json"] }

# Hashing
sha2 = "0.10"

# SQLite (for description storage)
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress and UI
indicatif = "0.17"
colored = "2.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
